wasm-component-ld: update to 0.5.11

--- a/mingw-w64-wasm-component-ld/PKGBUILD
+++ b/mingw-w64-wasm-component-ld/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=wasm-component-ld
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=0.5.10
+pkgver=0.5.11
 pkgrel=1
 pkgdesc="Command line linker for creating WebAssembly components (mingw-w64)"
 arch=('any')
@@ -12,18 +12,12 @@ url="https://github.com/bytecodealliance/wasm-component-ld"
 msys2_references=(
   'archlinux: wasm-component-ld'
 )
-license=('Apache-2.0 WITH LLVM-exception AND Apache-2.0 AND MIT')
-depends=(
-  "${MINGW_PACKAGE_PREFIX}-gcc-libs"
-  "${MINGW_PACKAGE_PREFIX}-lld"
-)
-makedepends=(
-  "${MINGW_PACKAGE_PREFIX}-rust"
-  'git'
-)
+license=('spdx:Apache-2.0 WITH LLVM-exception AND Apache-2.0 AND MIT')
+depends=("${MINGW_PACKAGE_PREFIX}-lld")
+makedepends=("${MINGW_PACKAGE_PREFIX}-rust")
 checkdepends=("${MINGW_PACKAGE_PREFIX}-rust-wasm")
 source=("${url}/archive/v${pkgver}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('aa049a93da595e4dacf742865f13e7fb1cec1ab47de9258f0a11d81ad6c7a77b')
+sha256sums=('323328b18a1e13e35e36339ce59c6e7c4d1800b4fbdd78ba6fa83f3358324414')
 
 prepare() {
   cd "${_realname}-${pkgver}"
