--- a/mingw-w64-qbs/PKGBUILD
+++ b/mingw-w64-qbs/PKGBUILD
@@ -4,12 +4,12 @@
 _realname=qbs
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=2.3.1
+pkgver=2.5.0
 pkgrel=1
 pkgdesc="Qt Build Suite (mingw-w64)"
-url='https://www.qt.io/'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
+url='https://qbs.io'
 license=('spdx:LGPL-3.0-only WITH Qt-GPL-exception-1.0 AND LGPL-2.1-or-later AND GPL-3.0-or-later')
 depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
          "${MINGW_PACKAGE_PREFIX}-libwinpthread-git"
@@ -28,10 +28,10 @@ source=("https://download.qt.io/official_releases/qbs/${pkgver}/${_pkgfqn}.tar.g
         "manifest"
         "0002-remove-lib-prefix-from-plugin-names.patch"
         "0004-Use-.dll.a-instead-of-.a-for-mingw-import-librar.1.4.patch")
-sha256sums=('ca61c6cd259c3cd5e2f4d6ca8b9d648880ea9de419cd69e99f571eeab0e5f9ea'
+sha256sums=('1801afd4f1fafc3015bd93a60da3896bf211ab4a328cddefde3cd16bafd5a6eb'
             '838098b25a8044176b3139b4003594570c62a8d64f5470fbbd769f3bf44e0855'
             'e62bfe3d1958ec0a83010d9fb27def32024839de9dbcd7088c21f08e1460c7e1'
-            '004b57ae370ad5a4f3ece17f97e34958f46297a439d778b93d7b4e3c1a7633e5')
+            '6f8cc5892f0ba94fceb31484d8b656d85afb5f1cf6f7b54e679de9a4f7286bc6')
 
 prepare() {
   cd ${_pkgfqn}
@@ -52,7 +52,7 @@ build() {
 
   CXXFLAGS+=" -Wno-attributes" \
   MSYS2_ARG_CONV_EXCL="-DCMAKE_INSTALL_PREFIX=" \
-  ${MINGW_PREFIX}/bin/cmake \
+  ${MINGW_PREFIX}/bin/cmake -Wno-dev \
     -G"Ninja" \
     -DCMAKE_INSTALL_PREFIX=${MINGW_PREFIX} \
     "${_extra_config[@]}" \
@@ -72,6 +72,12 @@ package() {
   cd ${srcdir}/build-${MSYSTEM}
 
   DESTDIR="${pkgdir}" ${MINGW_PREFIX}/bin/cmake --install .
+
+  install -d "${pkgdir}"${MINGW_PREFIX}/share/licenses/${_realname}
+  install -Dm644 "${srcdir}"/${_pkgfqn}/LICENSE.* \
+    -t "${pkgdir}"${MINGW_PREFIX}/share/licenses/${_realname}
+  install -Dm644 "${srcdir}"/${_pkgfqn}/LGPL_EXCEPTION.txt \
+    -t "${pkgdir}"${MINGW_PREFIX}/share/licenses/${_realname}
 
   for ff in qbs-setup-toolchains qbs-setup-qt; do
     cp ${srcdir}/manifest ${pkgdir}${MINGW_PREFIX}/bin/${ff}.exe.manifest
