--- a/mingw-w64-fastgltf/PKGBUILD
+++ b/mingw-w64-fastgltf/PKGBUILD
@@ -1,4 +1,4 @@
-# Maintainer: Andrew Sun <adsun701@gmail.com>
+# Maintainer: Felix Xing (Felixaszx) <felixaszx@outlook.com>
 
 _realname=fastgltf
 pkgbase=mingw-w64-${_realname}
