--- a/mingw-w64-headers-git/PKGBUILD
+++ b/mingw-w64-headers-git/PKGBUILD
@@ -4,9 +4,9 @@ _realname=headers
 pkgbase=mingw-w64-${_realname}-git
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}-git"
 pkgdesc="MinGW-w64 headers for Windows (mingw-w64)"
-pkgver=12.0.0.r406.gc0313ec33
+pkgver=12.0.0.r423.g8bcd5fc1a
 pkgrel=1
-_commit='c0313ec3381521db6c5e3aca746ff1e3e29208d7'
+_commit='8bcd5fc1a72c0b6da3147bf21a4a494c81d14fae'
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
 url="https://www.mingw-w64.org/"
@@ -21,7 +21,7 @@ conflicts=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 options=('!strip' '!emptydirs')
 source=("mingw-w64"::"git+https://git.code.sf.net/p/mingw-w64/mingw-w64#commit=$_commit"
         0001-remove-ireference-boolean.patch)
-sha256sums=('b482575dd7b51ce3400c1bdc227075b7bbb0becd3279165244493dd07ef384c4'
+sha256sums=('97ead29f8cf3c328a10f7b1eb1f5bcab533fce89c39216462fb64ffcf36fb511'
             'cad48616325b5e70afa4e02424021fc8d54e17dcbf86eae3df990d3500080236')
 
 pkgver() {
