--- a/mingw-w64-tools-git/PKGBUILD
+++ b/mingw-w64-tools-git/PKGBUILD
@@ -6,9 +6,9 @@ pkgbase=mingw-w64-${_realname}-git
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}-git"
 provides=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 conflicts=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=12.0.0.r406.gc0313ec33
+pkgver=12.0.0.r423.g8bcd5fc1a
 pkgrel=1
-_commit='c0313ec3381521db6c5e3aca746ff1e3e29208d7'
+_commit='8bcd5fc1a72c0b6da3147bf21a4a494c81d14fae'
 pkgdesc="MinGW-w64 tools (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
@@ -23,7 +23,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
 depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs")
 options=('!emptydirs')
 source=("mingw-w64"::"git+https://git.code.sf.net/p/mingw-w64/mingw-w64#commit=$_commit")
-sha256sums=('b482575dd7b51ce3400c1bdc227075b7bbb0becd3279165244493dd07ef384c4')
+sha256sums=('97ead29f8cf3c328a10f7b1eb1f5bcab533fce89c39216462fb64ffcf36fb511')
 _tools="gendef genidl genpeimg widl" # genstubdll
 
 pkgver() {
