Revert "putty: try to use wincon.h instead of consoleapi.h"
This reverts commit 3e35b7b8cdd106a72548d5fe453487c660a0db4c.

--- a/mingw-w64-putty/PKGBUILD
+++ b/mingw-w64-putty/PKGBUILD
@@ -7,7 +7,7 @@ _realname=putty
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 pkgver=0.82
-pkgrel=2
+pkgrel=3
 pkgdesc="A free telnet/SSH client (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -25,20 +25,12 @@ optdepends=("${MINGW_PACKAGE_PREFIX}-putty-ssh: ssh wrapper for plink")
 replaces=("${MINGW_PACKAGE_PREFIX}-${_realname}-git"
           "${MINGW_PACKAGE_PREFIX}-${_realname}-svn")
 source=("https://the.earth.li/~sgtatham/putty/latest/${_realname}-${pkgver}.tar.gz"
-        "putty-${pkgver}.tar.gz.sig::https://the.earth.li/~sgtatham/putty/${pkgver}/putty-${pkgver}.tar.gz.gpg"
-        "0001-consoleapi-missing.patch")
+        "putty-${pkgver}.tar.gz.sig::https://the.earth.li/~sgtatham/putty/${pkgver}/putty-${pkgver}.tar.gz.gpg")
 sha256sums=('195621638bb6b33784b4e96cdc296f332991b5244968dc623521c3703097b5d9'
-            'SKIP'
-            '741e90fe6920233ef527163b05a060ef5e1073cf194d537a4460882c38a0a41b')
+            'SKIP')
 validpgpkeys=('F412BA3AA30FDC0E77B4E3871993D21BCAD1AA77') # PuTTY Releases <putty@projects.tartarus.org>
 
 prepare() {
-  cd "${_realname}-${pkgver}"
-
-  # https://github.com/mingw-w64/mingw-w64/issues/71
-  patch -Np1 -i "${srcdir}/0001-consoleapi-missing.patch"
-
-  cd "${srcdir}"
   mkdir -p "${srcdir}"/${_realname}-build-${MSYSTEM}
 }
 
