--- a/mingw-w64-liblc3/PKGBUILD
+++ b/mingw-w64-liblc3/PKGBUILD
@@ -4,7 +4,7 @@ _realname=liblc3
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 pkgver=1.1.1
-pkgrel=1
+pkgrel=2
 pkgdesc="Low Complexity Communication Codec library and tools (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -18,7 +18,18 @@ source=("https://github.com/google/liblc3/archive/refs/tags/v${pkgver}.tar.gz")
 sha256sums=('b65e38943708529efd04a87dd1a9f16a9856ed6199d082b18e7d42fb5c59486e')
 
 build() {
-  mkdir -p "build-${MSYSTEM}" && cd "build-${MSYSTEM}"
+  MSYS2_ARG_CONV_EXCL="--prefix=" \
+    meson setup \
+      --prefix="${MINGW_PREFIX}" \
+      --wrap-mode=nodownload \
+      --auto-features=enabled \
+      --buildtype=plain \
+      --default-library=static \
+      -Db_lto=false \
+      "build-${MSYSTEM}-static" \
+      "${_realname}-${pkgver}"
+
+  meson compile -C "build-${MSYSTEM}-static"
 
   MSYS2_ARG_CONV_EXCL="--prefix=" \
     meson setup \
@@ -26,15 +37,17 @@ build() {
       --wrap-mode=nodownload \
       --auto-features=enabled \
       --buildtype=plain \
-      "../${_realname}-${pkgver}"
+      --default-library=shared \
+      -Db_lto=false \
+      "build-${MSYSTEM}-shared" \
+      "${_realname}-${pkgver}"
 
-  meson compile
+  meson compile -C "build-${MSYSTEM}-shared"
 }
 
 package() {
-  cd "${srcdir}/build-${MSYSTEM}"
-
-  DESTDIR="${pkgdir}" meson install
+  meson install -C "build-${MSYSTEM}-static" --destdir "${pkgdir}"
+  meson install -C "build-${MSYSTEM}-shared" --destdir "${pkgdir}"
 
   install -Dm644 "${srcdir}/${_realname}-${pkgver}/LICENSE" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE"
 }
