zed: update to 0.164.2 - remove backport

--- a/mingw-w64-zed/PKGBUILD
+++ b/mingw-w64-zed/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=zed
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=0.163.3
+pkgver=0.164.2
 pkgrel=1
 pkgdesc="A high-performance, multiplayer code editor (mingw-w64)"
 arch=('any')
@@ -43,22 +43,17 @@ fi
 source=("git+${msys2_repository_url}.git#tag=v${pkgver}"
         "zstd-sys.tar.gz::https://crates.io/api/v1/crates/zstd-sys/2.0.13+zstd.1.5.6/download"
         "zed-dont-vendor-cargo-about.patch"
-        "zstd-sys-remove-statik.patch"
-        "zed-set-create-no-window.patch::https://github.com/zed-industries/zed/commit/95ace0370672b4784821648887d57a95bf974291.patch")
-sha256sums=('3cbf8a39c4f15df0e833c74a7605a4d7be5a4a8e6b7cc14023aa09d61436b5a2'
+        "zstd-sys-remove-statik.patch")
+sha256sums=('a4ca4065f3537a6e8dddaee3ab2af7fab857861932eb567cd4f5a558b46d31ac'
             '38ff0f21cfee8f97d94cef41359e0c89aa6113028ab0291aa8ca0038995a95aa'
             'b126b7a9e3cc8d3d68c49dbfc184d54691b10172dbfd3272d4c2f43424cfca5b'
-            '48f4900ceb02d3aaf9a1020f33d56629156e96759f456c0e7ca18bfcf910767b'
-            'a3243f356c0608bdec190fb4c508cb8268f866e8ff1208951dfd6b24e04c75f1')
+            '48f4900ceb02d3aaf9a1020f33d56629156e96759f456c0e7ca18bfcf910767b')
 
 prepare() {
   cd "${_realname}"
 
   rm rust-toolchain.toml
 
-  # set `CREATE_NO_WINDOW` for commands that shouldn't do so, partial backport of
-  # https://github.com/zed-industries/zed/commit/95ace0370672b4784821648887d57a95bf974291
-  patch -Np1 -i "../zed-set-create-no-window.patch"
   # use system cargo about to generate license file
   patch -Np1 -i "../zed-dont-vendor-cargo-about.patch"
   # link system deps dynamically
