minidump-stackwalk: update to 0.23.0

--- a/mingw-w64-minidump-stackwalk/PKGBUILD
+++ b/mingw-w64-minidump-stackwalk/PKGBUILD
@@ -4,20 +4,20 @@ _realname=minidump-stackwalk
 _projectname=rust-minidump
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=0.22.2
+pkgver=0.23.0
 pkgrel=1
 pkgdesc="Provides both machine-readable and human-readable digests of a minidump, with backtraces and symbolication (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
-url='https://github.com/rust-minidump/rust-minidump/tree/main/minidump-stackwalk'
+url='https://github.com/rust-minidump/rust-minidump'
 msys2_references=(
   'aur: minidump-stackwalk'
   'purl: pkg:cargo/minidump-stackwalk'
 )
 license=('spdx:MIT')
 makedepends=("${MINGW_PACKAGE_PREFIX}-rust")
-source=("https://github.com/rust-minidump/rust-minidump/archive/v${pkgver}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('c9801651a60f435c69c3dc326e80715275c8177544a93d26fc36c455f8e15e1f')
+source=("${url}/archive/v${pkgver}/${_realname}-${pkgver}.tar.gz")
+sha256sums=('1646fea54f15451a1fb3c75c87e4c6a663f2c8316a6bc4ace33ff8df18f3ccd6')
 
 prepare() {
   cp -r "${_projectname}-${pkgver}" "build-${MSYSTEM}" && cd "build-${MSYSTEM}"
