--- a/mingw-w64-pyqt6/PKGBUILD
+++ b/mingw-w64-pyqt6/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=pyqt6
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-_pkgver=6.8.0.dev2412021801
+_pkgver=6.8.0.dev2412041050
 pkgver=${_pkgver/.dev/dev}
 pkgrel=1
 pkgdesc="Python bindings for the Qt cross platform application toolkit (mingw-w64)"
@@ -21,6 +21,7 @@ depends=("${MINGW_PACKAGE_PREFIX}-python"
 optdepends=("${MINGW_PACKAGE_PREFIX}-qt6-activeqt"
             "${MINGW_PACKAGE_PREFIX}-qt6-connectivity"
             "${MINGW_PACKAGE_PREFIX}-qt6-declarative"
+            #"${MINGW_PACKAGE_PREFIX}-qt6-graphs"
             "${MINGW_PACKAGE_PREFIX}-qt6-multimedia"
             "${MINGW_PACKAGE_PREFIX}-qt6-pdf"
             "${MINGW_PACKAGE_PREFIX}-qt6-positioning"
@@ -29,6 +30,7 @@ optdepends=("${MINGW_PACKAGE_PREFIX}-qt6-activeqt"
             "${MINGW_PACKAGE_PREFIX}-qt6-sensors"
             "${MINGW_PACKAGE_PREFIX}-qt6-serialport"
             "${MINGW_PACKAGE_PREFIX}-qt6-shadertools"
+            "${MINGW_PACKAGE_PREFIX}-qt6-speech"
             "${MINGW_PACKAGE_PREFIX}-qt6-svg"
             "${MINGW_PACKAGE_PREFIX}-qt6-tools"
             "${MINGW_PACKAGE_PREFIX}-qt6-webchannel"
@@ -40,6 +42,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-qt6-activeqt"
              "${MINGW_PACKAGE_PREFIX}-qt6-connectivity"
              "${MINGW_PACKAGE_PREFIX}-qt6-declarative"
+             #$([[ ${MSYSTEM} == MINGW64 ]] || echo "${MINGW_PACKAGE_PREFIX}-qt6-graphs")
              "${MINGW_PACKAGE_PREFIX}-qt6-multimedia"
              $([[ ${MSYSTEM} == MINGW64 || ${CARCH} == aarch64 ]] || echo "${MINGW_PACKAGE_PREFIX}-qt6-pdf")
              "${MINGW_PACKAGE_PREFIX}-qt6-positioning"
@@ -48,13 +51,14 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-qt6-sensors"
              "${MINGW_PACKAGE_PREFIX}-qt6-serialport"
              "${MINGW_PACKAGE_PREFIX}-qt6-shadertools"
+             "${MINGW_PACKAGE_PREFIX}-qt6-speech"
              "${MINGW_PACKAGE_PREFIX}-qt6-svg"
              "${MINGW_PACKAGE_PREFIX}-qt6-tools"
              "${MINGW_PACKAGE_PREFIX}-qt6-webchannel"
              "${MINGW_PACKAGE_PREFIX}-qt6-websockets")
 #source=(https://pypi.python.org/packages/source/P/PyQt6/PyQt6-${pkgver}.tar.gz)
 source=(https://www.riverbankcomputing.com/pypi/packages/PyQt6/PyQt6-${_pkgver}.tar.gz)
-sha256sums=('5b2929354a16c56cbd8171ee3f4fa1fb5c32c8cdc02269affef6da17d0a89584')
+sha256sums=('47a3c75813ae9d59e4f7ded6350ab43fe5fad7bfe002bf9374d491ee748d4510')
 
 prepare() {
   cd "${srcdir}"
@@ -78,9 +82,10 @@ build() {
     --api-dir=${MINGW_PREFIX}/share/qt6/qsci/api/python \
     --qmake=${MINGW_PREFIX}/bin/qmake6.exe \
     --qmake-setting "CONFIG += ${_build_type}" \
+    --qmake-setting "QMAKE_CXXFLAGS=${CXXFLAGS}" \
     --verbose
 
-    make -C build V=1
+    make -C build
 }
 
 package(){
