patch 3rd party

--- a/mingw-w64-qt6-quick3d/PKGBUILD
+++ b/mingw-w64-qt6-quick3d/PKGBUILD
@@ -28,9 +28,11 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "rsync")
 _pkgfn="${_realname/6-/}-everywhere-src-${_qtver}"
 source=("https://download.qt.io/official_releases/qt/${pkgver%.*}/${_qtver}/submodules/${_pkgfn}.tar.xz"
-        001-appending-qt6-to-remove-qt5-conflict.patch)
+        001-appending-qt6-to-remove-qt5-conflict.patch
+        002-fix-bezier-curve.patch)
 sha256sums=('3f3d345e6c95fcd40ab37e6a37cd31811e5d239dea8e142e632d4ea41bf20ce7'
-            '211bb1f042bf9c0ddedb15b0e3d62b94e3b247dc96294fd92f4d8035784f1c7d')
+            '211bb1f042bf9c0ddedb15b0e3d62b94e3b247dc96294fd92f4d8035784f1c7d'
+            'a0018d784e27f3cb7ccbaea8a4b64e3dfb5fd8dbcc3135210046a1807568b293')
 
 # Helper macros to help make tasks easier #
 apply_patch_with_msg() {
@@ -45,7 +47,8 @@ prepare() {
   cd $srcdir/${_pkgfn}
 
   apply_patch_with_msg \
-    001-appending-qt6-to-remove-qt5-conflict.patch
+    001-appending-qt6-to-remove-qt5-conflict.patch \
+    002-fix-bezier-curve.patch
 }
 
 build() {
