--- a/mingw-w64-fastgltf/PKGBUILD
+++ b/mingw-w64-fastgltf/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=0.8.0
 pkgrel=1
 pkgdesc="fastgltf is a speed and usability focused glTF 2.0 library written in modern C++17 with minimal dependencies (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64')
 url="https://github.com/spnda/fastgltf"
 depends=("${MINGW_PACKAGE_PREFIX}-simdjson")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
