--- a/mingw-w64-python-h5pyd/PKGBUILD
+++ b/mingw-w64-python-h5pyd/PKGBUILD
@@ -3,8 +3,8 @@
 _realname=h5pyd
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=0.18.0
-pkgrel=4
+pkgver=0.19.0
+pkgrel=1
 pkgdesc="h5py distributed - Python client library for HDF Rest API (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -15,6 +15,7 @@ msys2_references=(
 license=('BSD')
 depends=("${MINGW_PACKAGE_PREFIX}-python-numpy"
          "${MINGW_PACKAGE_PREFIX}-python-requests-unixsocket"
+         "${MINGW_PACKAGE_PREFIX}-python-packaging"
          "${MINGW_PACKAGE_PREFIX}-python-pytz"
          "${MINGW_PACKAGE_PREFIX}-python-pyjwt")
 optdepends=(#"${MINGW_PACKAGE_PREFIX}-python-msrestazure: extra azure support"
@@ -29,18 +30,11 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-setuptools"
              "${MINGW_PACKAGE_PREFIX}-python-pkgconfig")
 options=('!strip')
-source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('53cee21d7f2d8c25671e4a9d615b1833a495bc198bc44fe14d841298ae0684be')
-
-prepare() {
-  cd "${srcdir}"
-  rm -rf "python-build-${MSYSTEM}" | true
-  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}"
-}
+source=("${_realname}-${pkgver}.tar.gz::https://github.com/HDFGroup/h5pyd/archive/refs/tags/v${pkgver}.tar.gz")
+sha256sums=('45ccdd5575206416f53fb630e41a6d8b3d78cfef7fbde3d973f151a0f7bff25f')
 
 build() {
-  cd "${srcdir}/python-build-${MSYSTEM}"
-
+  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
   ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
 
