python-pywavelets: update to 1.8.0

--- a/mingw-w64-python-pywavelets/PKGBUILD
+++ b/mingw-w64-python-pywavelets/PKGBUILD
@@ -3,16 +3,17 @@
 _realname=pywavelets
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=1.7.0
-pkgrel=2
+pkgver=1.8.0
+pkgrel=1
 pkgdesc="Discrete Wavelet Transforms in Python (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
-url="https://github.com/PyWavelets/pywt"
+msys2_repository_url="https://github.com/PyWavelets/pywt"
 msys2_references=(
   'aur: python-pywavelets'
   'pypi: PyWavelets'
 )
+url='https://pywavelets.readthedocs.io/'
 license=('spdx:MIT')
 depends=("${MINGW_PACKAGE_PREFIX}-python"
          "${MINGW_PACKAGE_PREFIX}-python-numpy")
@@ -23,9 +24,9 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-cython"
              "${MINGW_PACKAGE_PREFIX}-pkgconf"
              "${MINGW_PACKAGE_PREFIX}-cc")
-options=('!strip' '!emptydirs')
+options=('!strip')
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('b47250e5bb853e37db5db423bafc82847f4cde0ffdf7aebb06336a993bc174f6')
+sha256sums=('f3800245754840adc143cbc29534a1b8fc4b8cff6e9d403326bd52b7bb5c35aa')
 
 build() {
   cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
