python-typer: update to 0.15.1

--- a/mingw-w64-python-typer/PKGBUILD
+++ b/mingw-w64-python-typer/PKGBUILD
@@ -3,13 +3,13 @@
 _realname=typer
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=0.12.3
-pkgrel=3
+pkgver=0.15.1
+pkgrel=1
 pkgdesc='Build great CLIs. Easy to code. Based on Python type hints (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://typer.tiangolo.com/'
-msys2_repository_url='https://github.com/tiangolo/typer'
+msys2_repository_url='https://github.com/fastapi/typer'
 msys2_references=(
   'pypi: typer'
 )
@@ -25,7 +25,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-setuptools")
 options=('!strip')
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('49e73131481d804288ef62598d97a1ceef3058905aa536a1134f90891ba35482')
+sha256sums=('a0588c0a7fa68a1978a069818657778f86abe6ff5ea6abf472f940a08bfe4f0a')
 
 build() {
   cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
