--- a/mingw-w64-adbc/PKGBUILD
+++ b/mingw-w64-adbc/PKGBUILD
@@ -22,12 +22,14 @@ options=('staticlibs' 'strip' 'emptydirs')
 # source=("https://github.com/apache/arrow-adbc/releases/download//apache-arrow-${_realname}-${pkgver:0:2}/apache-arrow-${_realname}-${pkgver:0:2}.tar.gz")
 source=("git+https://github.com/apache/arrow-adbc.git#commit=e6bb104"
         "adbc-001.patch")
-sha256sums=('e6bb1047c486f2926e24d4a674e0a7bc4c2abced'
+sha256sums=('SKIP'
             'e50a30c413ff64d6fc1ec71f4adbebdcefaf2c6a2d0795d79dbad9233c1e213f')
 
 
 build() {
-  cd "${srcdir}/arrow-adbc-${pkgver}"
+  cd "${srcdir}/arrow-adbc"
+  
+  patch -p1 -i "${srcdir}"/adbc-001.patch
   
   # Update Go compiler path 
   export GOROOT=/${MINGW_PREFIX}/lib/go
@@ -51,7 +53,7 @@ build() {
       -DADBC_DRIVER_FLIGHTSQL=ON \
       -DADBC_DRIVER_POSTGRESQL=ON \
       "${_extra_config[@]}" \
-      ../arrow-adbc-${pkgver}/c
+      ../arrow-adbc/c
 
   "${MINGW_PREFIX}"/bin/cmake.exe --build .
 }
