--- a/mingw-w64-adbc/PKGBUILD
+++ b/mingw-w64-adbc/PKGBUILD
@@ -32,7 +32,7 @@ build() {
   patch -p1 -i "${srcdir}"/adbc-001.patch
   
   # Update Go compiler path 
-  export GOROOT=/${MINGW_PREFIX}/lib/go
+  export GOROOT=${MINGW_PREFIX}/lib/go
   
   [[ -d ${srcdir}/build-${MINGW_CHOST} ]] && rm -rf ${srcdir}/build-${MINGW_CHOST}
   mkdir -p ${srcdir}/build-${MINGW_CHOST} && cd ${srcdir}/build-${MINGW_CHOST}  
