--- a/mingw-w64-itstool/PKGBUILD
+++ b/mingw-w64-itstool/PKGBUILD
@@ -4,26 +4,43 @@ _realname=itstool
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 pkgver=2.0.6
-pkgrel=5
+pkgrel=6
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
 pkgdesc="XML to PO and back again (mingw-w64)"
-url="http://itstool.org/"
+url="https://itstool.org/"
 license=("GPL3")
-depends=("${MINGW_PACKAGE_PREFIX}-python3"
+depends=("${MINGW_PACKAGE_PREFIX}-python"
          "${MINGW_PACKAGE_PREFIX}-libxml2")
-makedepends=("${MINGW_PACKAGE_PREFIX}-python3-setuptools" "${MINGW_PACKAGE_PREFIX}-autotools" "${MINGW_PACKAGE_PREFIX}-cc")
-source=(http://files.itstool.org/itstool/${_realname}-${pkgver}.tar.bz2
+makedepends=("${MINGW_PACKAGE_PREFIX}-python-setuptools"
+             "${MINGW_PACKAGE_PREFIX}-autotools"
+             "${MINGW_PACKAGE_PREFIX}-cc")
+source=("https://files.itstool.org/itstool/${_realname}-${pkgver}.tar.bz2"
+        "0001-Fix-the-crash-from-912099.patch"
+        "0002-Fix-insufficiently-quoted-regular-expressions.patch"
         'reloc.patch'
         'pyscript2exe.py')
 sha256sums=('6233cc22726a9a5a83664bf67d1af79549a298c23185d926c3677afa917b92a9'
+            'b43cea38118aaefa6724136d142dcc7099cd6de04cf2e226f53d4310dfe207cc'
+            '4e64a2e884f9d4cbc493732fcbde9f1d5bed534f9a66330bbcc1cbeb54808c1e'
             'f292bcd116da4ea36ee9c42e206dbd9151d147da1ef5a078e743fc9ed0a4ab47'
             'e57174517b08cf8f9fb4f43a381d342d23d2db3cad661107f35ca21c39b5734d')
+
+_apply_patch_with_msg() {
+  for _patch in "$@"
+  do
+    msg2 "Applying ${_patch}"
+    patch -p1 -i "${srcdir}/${_patch}"
+  done
+}
 
 prepare() {
   cd "${srcdir}/${_realname}-${pkgver}"
 
-  patch -p1 -i ${srcdir}/reloc.patch
+  _apply_patch_with_msg \
+    0001-Fix-the-crash-from-912099.patch \
+    0002-Fix-insufficiently-quoted-regular-expressions.patch \
+    reloc.patch
 
   autoreconf -fvi
 }
