another patch in 3rd party

--- a/mingw-w64-qt6-quick3d/PKGBUILD
+++ b/mingw-w64-qt6-quick3d/PKGBUILD
@@ -29,10 +29,12 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
 _pkgfn="${_realname/6-/}-everywhere-src-${_qtver}"
 source=("https://download.qt.io/official_releases/qt/${pkgver%.*}/${_qtver}/submodules/${_pkgfn}.tar.xz"
         001-appending-qt6-to-remove-qt5-conflict.patch
-        002-fix-bezier-curve.patch)
+        002-fix-bezier-curve.patch
+        003-fix-pointi.patch)
 sha256sums=('3f3d345e6c95fcd40ab37e6a37cd31811e5d239dea8e142e632d4ea41bf20ce7'
             '211bb1f042bf9c0ddedb15b0e3d62b94e3b247dc96294fd92f4d8035784f1c7d'
-            '774abd51e93fbcd9b4db4cd97a0200b546eccc0dc8ca9014c1a05a7c244e6bb8')
+            '774abd51e93fbcd9b4db4cd97a0200b546eccc0dc8ca9014c1a05a7c244e6bb8'
+            'ce6302aee7306d5bbffb4c5887b102e542bf08068bed014ab4a91f1245cebed9')
 
 # Helper macros to help make tasks easier #
 apply_patch_with_msg() {
@@ -48,7 +50,8 @@ prepare() {
 
   apply_patch_with_msg \
     001-appending-qt6-to-remove-qt5-conflict.patch \
-    002-fix-bezier-curve.patch
+    002-fix-bezier-curve.patch \
+    003-fix-pointi.patch
 }
 
 build() {
