Update to 8.10 Ardour

--- a/mingw-w64-ardour/PKGBUILD
+++ b/mingw-w64-ardour/PKGBUILD
@@ -1,8 +1,8 @@
 _realname=ardour
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=8.4
-_commit=c35515e43d65bac23c89ae11cfbf2fed8c8f46b6  # refs/tags/8.4^{}
+pkgver=8.10
+_commit=0a0848b2d61105ae27c8713d06e782bee34f2778  # refs/tags/8.4^{}
 pkgrel=1
 pkgdesc="Professional-grade digital audio workstation (mingw-w64)"
 arch=(any)
@@ -89,17 +89,15 @@ source=(
   $_realname-midi-$pkgver.zip::http://stuff.$_realname.org/loops/ArdourBundledMedia.zip
   0001-*.patch
   0002-remove-glib-deprecated-functions.patch
+  0003-*.patch
+  0004-*.patch
 )
 noextract=($_realname-midi-$pkgver.zip)
-sha512sums=('SKIP'
-            '94b681f989e834f5de25ce87da9c174b11d90617063f8c96147d7eb470391b35f6d54b85de16da8d963cacb01b50d1c1fab0fddd18eb3b086fe17124ecfa4f65'
-            '0181174eeb511604f1d4e12350a879fc2345f87edfbe10af50cb8dcf15d7a1dfd6d2130b646afe597189cec225b258eeb61265d750322ab277236c4183456977'
-            'fc1c19ef8c08020172c1da7eb5ae4906c0f900cdc1c87fa86dc8540ab7f1f16202c4dbd24c5f5eb9f12fbddf868968c72f25b86c16ff7e3f08210372d119e3c7')
-b2sums=('SKIP'
-        'e31be6b51a217e2f7f799aa1d6e8c3cd024d80ab2d8d4371496a2b8bf0215749979217b565909841a346d6b3128fbfd674d2fae64b9fe741a5b418cd184c23be'
-        '50dc5537cc8abfd6de4965133b3055f4388d2e29fc7566be2d11ef453c5e4e62c59d6cdbb137474b6dd3bb7349a787a758459c8e39f4e3e939f99dbf9a34bdc9'
-        '96593b52ba484065fb755c7aa7ae46e2c883bb1902e0d947dbad84afba9cf4681328902788bfe002fd02af5cd8949aae94156573a6d6dbff08dc5b5250dd2db7')
-
+sha256sums=('c039eebf76873291c53e086031f9a41e332f3d68fe50efd5b6cf37bc906bfef3'
+            'a00de00671cdc329b2ca35c2a5c4150af3d6588147f9dca2e3dea752aa2e234c'
+            '649c43b05c7c100bbf47a2167238653bcac0d73bd35feba418d1a42ae835cdc6'
+            '69be47f8884a7da8c06e68d69d870662547fa559216b9db31a9ffb4eac6757bf'
+            '34f2ee5f28d43c703c70b66b7868f225ad06d12c9cdf0296c629333f97babcb6' 'SKIP')
 pkgver() {
   cd $_realname
   git describe --tags --abbrev=7 | sed 's/\([^-]*-g\)/r\1/;s/-/./g'
@@ -107,7 +105,9 @@ pkgver() {
 
 prepare() {
   patch -Np1 -d $_realname -i ../0001*.patch
+  patch -Np1 -d $_realname -i ../0003*.patch
   patch -Np1 -d $_realname -i ../0002*.patch
+  patch -Np1 -d $_realname -i ../0004*.patch
 
 
   cd $_realname
@@ -135,7 +135,7 @@ build() {
     --check-cxx-compiler=${CXX}
     --dist-target=mingw 
     --configdir=/etc
-    --cxx11
+    --cxx17
     --freedesktop
     --no-phone-home
     --optimize
@@ -169,3 +169,4 @@ package() {
   unzip $srcdir/../$_realname-midi-$pkgver.zip -d "$pkgdir${MINGW_PREFIX}/share/$_realname${pkgver/.*/}/media/"
 }
 # vim:set ts=2 sw=2 et:
+
