podman: Update to 5.3.1
* replace /etc patch with just setting it during make
* make envsubst work for the docker wrapper (this regressed in MSYS2 at some point)

--- a/mingw-w64-podman/PKGBUILD
+++ b/mingw-w64-podman/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=podman
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=5.2.5
+pkgver=5.3.1
 pkgrel=1
 pkgdesc='Tool for running OCI-based containers in pods (mingw-w64)'
 arch=('any')
@@ -17,16 +17,17 @@ makedepends=(
     "${MINGW_PACKAGE_PREFIX}-go"
     "${MINGW_PACKAGE_PREFIX}-cc"
     "${MINGW_PACKAGE_PREFIX}-python"
-    "git"
+    "${MINGW_PACKAGE_PREFIX}-gettext-runtime"
+    "git"  # needed during the build
 )
 options=('!strip')
 _GV_VERSION="0.7.5"  # See GVPROXY_VERSION in Makefile
 source=("https://github.com/containers/podman/archive/v$pkgver/${_realname}-${pkgver}.tar.gz"
         "https://github.com/containers/gvisor-tap-vsock/archive/v${_GV_VERSION}/gvisor-tap-vsock-${_GV_VERSION}.tar.gz"
-        "0001-etc-prefix.patch")
-sha256sums=('18bbf2c26534229c030590d65da88154bed31f0207041d30fed5f508b933a66c'
+        "https://github.com/containers/podman/pull/24793.patch")
+sha256sums=('5b4e9ddce69cc2c8c8b8529e90093ae3ea9cb2959e2fceb98469b282dbffbcc7'
             'd635bc55dbb97cf2a469427fb84b7a90f37540f14b090c21356cce2e549b46e0'
-            '2a1a5c9d126634e871853cfa0e17af8f1597a6ed9c709f59c4a19e1bbb76c68d')
+            '8272a7635e81f66126e2fd611c12831e219dcf1c756ea5543398aa1269a9dc3f')
 noextract=("${_realname}-${pkgver}.tar.gz")
 
 prepare() {
@@ -35,7 +36,8 @@ prepare() {
     rm -rf build-${MSYSTEM}
 
     cd "${_realname}-${pkgver}"
-    patch -Np1 -i "${srcdir}/0001-etc-prefix.patch"
+    # https://github.com/containers/podman/pull/24793
+    patch -Np1 -i "${srcdir}/24793.patch"
     cd "${srcdir}"
 
     cp -r ${_realname}-${pkgver} build-${MSYSTEM}
@@ -73,7 +75,8 @@ package() {
     # copy the proxy binaries where install.remote expects them
     cp "${srcdir}/build-proxy-${MSYSTEM}/bin/"* "./bin/windows"
 
-    make install.remote install.docker-full install.man install.completions DESTDIR="$pkgdir" PREFIX=${MINGW_PREFIX}
+    # skip convert for mingw envsubst
+    MSYS2_ENV_CONV_EXCL="BINDIR;ETCDIR" \
+        make install.remote install.docker-full install.man install.completions DESTDIR="$pkgdir" PREFIX=${MINGW_PREFIX} ETCDIR=${MINGW_PREFIX}/etc
     rm -Rf "${pkgdir}${MINGW_PREFIX}/lib"
-    sed -i "s|/usr/bin/||g" "${pkgdir}${MINGW_PREFIX}/bin/docker"
 }
