mumps: fix win32 compilation

--- a/mingw-w64-mumps/PKGBUILD
+++ b/mingw-w64-mumps/PKGBUILD
@@ -30,7 +30,7 @@ _realname=mumps
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 pkgver=5.7.3
-pkgrel=2
+pkgrel=3
 pkgdesc="Sparse direct SLAE solver (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64')
@@ -51,7 +51,7 @@ optdepends=("${MINGW_PACKAGE_PREFIX}-tcl: build & run test suite")
 source=("https://mumps-solver.org/MUMPS_${pkgver}.tar.gz"
         "0001-makefile.inc.patch"
         "0002-skip-examples.patch"
-        "0003-fix-setenv.patch"
+        "0003-fix-win32.patch"
         "mumps.tcl"
         "testme-0.tm"
         "buildme-0.tm"
@@ -59,7 +59,7 @@ source=("https://mumps-solver.org/MUMPS_${pkgver}.tar.gz"
 sha256sums=('84a47f7c4231b9efdf4d4f631a2cae2bdd9adeaabc088261d15af040143ed112'
             'd4e3d06c316544304ac6fefd595f20fd5865e791c9377e031fbad49b6238406c'
             'bbefd4a5f841536132f32c1ffc684a58b778901cd777445ca817dbb34d983450'
-            '11609d173fc0df7b1d7269c19d5d81b2fd05a3abc57eff8ba12de1597242236c'
+            '357c13b985e75604fd9f59f2f174e6c75fd9133d0806e2db2d584d33e32b108d'
             'aa8cc50e447eebb14492744c8be6bd8f731e0140c339a76cc31e54ea2f11813d'
             '8d8f5670ffdf34a10b0d027bff976131824e2e6b053f8a13d207ecddd4663d6d'
             'd0db2aa573c9aaf57b30cb3c2bd7c66e1677f3f468002f467da98b75943076b1'
@@ -78,7 +78,7 @@ prepare() {
   apply_patch_with_msg \
     "0001-makefile.inc.patch" \
     "0002-skip-examples.patch" \
-    "0003-fix-setenv.patch"
+    "0003-fix-win32.patch"
 }
 
 seq_pc="metis scotch openblas"
@@ -95,7 +95,7 @@ build() {
   fi
   for mod in SEQ SHM PAR; do
     cp Makefile.inc.${mod} Makefile.inc
-    make -j1 clean s d c z
+    for x in clean s d c z; do make -j $x; done
     if [[ $mod == SEQ ]]; then
       cp libseq/libmpiseq_seq.a lib/libmumps_mpi_seq.a
       cp PORD/lib/libpord_seq.a lib/libmumps_pord.a
