dragon: update to 1.5.5

--- a/mingw-w64-dragon/PKGBUILD
+++ b/mingw-w64-dragon/PKGBUILD
@@ -3,29 +3,26 @@
 _realname=dragon
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=1.5.2
-pkgrel=2
+pkgver=1.5.5
+pkgrel=1
 pkgdesc="Dragon parser generator (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
-url='http://www.lemke-it.com/'
-license=('GPL3')
+url='https://www.lemke-it.com/'
+license=('spdx:GPL-3.0-or-later')
 
-makedepends=("${MINGW_PACKAGE_PREFIX}-cc" "${MINGW_PACKAGE_PREFIX}-autotools")
-depends=("${MINGW_PACKAGE_PREFIX}-lfcbase")
+makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
+             "${MINGW_PACKAGE_PREFIX}-autotools")
+depends=("${MINGW_PACKAGE_PREFIX}-lfcbase"
+         "${MINGW_PACKAGE_PREFIX}-gcc-libs")
 # validpgpkeys=('gpg_KEY')
-source=("http://www.lemke-it.com/${_realname}-${pkgver}.tar.gz")
+source=("https://www.lemke-it.com/${_realname}-${pkgver}.tar.gz")
 
-sha256sums=("8d3e37632bb3fb89c915891bef821f52991903dc6d18193eab70576ae0d2aeb2")
-
-prepare() {
-  cd $srcdir/${_realname}-${pkgver}
-}
+sha256sums=('b5f5d601e61724fd1716ee50473cc5833ab23042476991abb084a9d0f9dfdd6d')
 
 build() {
-  cd "$srcdir"/${_realname}-${pkgver}
-  [[ -d "${srcdir}"/build-${CARCH} ]] && rm -rf "${srcdir}"/build-${CARCH}
-  mkdir -p "${srcdir}"/build-${CARCH} && cd "${srcdir}"/build-${CARCH}
+  mkdir -p "build-${MSYSTEM}" && cd "build-${MSYSTEM}"
+
   ../${_realname}-${pkgver}/configure \
     --prefix=${MINGW_PREFIX} \
     --build=${MINGW_CHOST} \
@@ -38,11 +35,12 @@ build() {
 }
 
 check() {
-  cd "${srcdir}"/build-${CARCH}
+  cd "build-${MSYSTEM}"
   make check
 }
 
 package() {
-  cd "${srcdir}"/build-${CARCH}
+  cd "build-${MSYSTEM}"
   make install DESTDIR="${pkgdir}"
+  install -Dm644 "${srcdir}/${_realname}-${pkgver}/COPYING" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/COPYING"
 }
