--- a/mingw-w64-gromacs/PKGBUILD
+++ b/mingw-w64-gromacs/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=gromacs
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=2024.3
+pkgver=2024.4
 pkgrel=1
 pkgdesc="A free and open-source software suite for high-performance molecular dynamics and output analysis. (mingw-w64)"
 arch=('any')
@@ -27,7 +27,8 @@ source=("https://ftp.gromacs.org/gromacs/${_realname}-${pkgver}.tar.gz"
         "002-fix-build-clfft.patch"
         "003-use-_putenv-on-mingw.patch"
         "004-define-libgromacs_EXPORTS.patch")
-sha256sums=('bbda056ee59390be7d58d84c13a9ec0d4e3635617adf2eb747034922cba1f029'
+noextract=("${_realname}-${pkgver}.tar.gz")
+sha256sums=('ac618ece2e58afa86b536c5a2c4fcb937f0760318f12d18f10346b6bdebd86a8'
             'd5a39e555577f766496ceaa68025e98f82031ebd06c8df0523f0d750ba4c7590'
             '06f4dd5a33d0a2cae8d4e04a23eab7c441f63b79c38b374d3740eda35353a2c2'
             'e5c3ade4df87dd3a27cbfa67c7dd4cf10ea0a318ecbafa6e7770e29788e80f64'
@@ -42,6 +43,8 @@ apply_patch_with_msg() {
 }
 
 prepare() {
+  tar -xf "${_realname}-${pkgver}.tar.gz" || true
+
   cd "${srcdir}"/${_realname}-${pkgver}
 
   apply_patch_with_msg \
