highfive: update to 2.10.1

--- a/mingw-w64-highfive/PKGBUILD
+++ b/mingw-w64-highfive/PKGBUILD
@@ -3,12 +3,13 @@
 _realname=highfive
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=2.10.0
-pkgrel=2
+pkgver=2.10.1
+pkgrel=1
 pkgdesc='Modern header-only C++11 friendly interface for libhdf5 (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
-url='https://github.com/BlueBrain/HighFive'
+msys2_repository_url='https://github.com/BlueBrain/HighFive'
+url='https://bluebrain.github.io/HighFive/'
 license=('spdx:BSL-1.0')
 depends=("${MINGW_PACKAGE_PREFIX}-hdf5")
 makedepends=(
@@ -26,7 +27,7 @@ optdepends=(
   "${MINGW_PACKAGE_PREFIX}-eigen3"
 )
 source=("https://github.com/BlueBrain/HighFive/archive/v${pkgver}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('c29e8e1520e7298fabb26545f804e35bb3af257005c1c2df62e39986458d7c38')
+sha256sums=('60d66ba1315730494470afaf402bb40300a39eb6ef3b9d67263335a236069cce')
 
 build() {
   declare -a extra_config
