Now it decides there are no shared libraries
Why?

--- a/mingw-w64-sentencepiece/PKGBUILD
+++ b/mingw-w64-sentencepiece/PKGBUILD
@@ -45,10 +45,11 @@ build() {
       -GNinja \
       -DCMAKE_INSTALL_PREFIX="${MINGW_PREFIX}" \
       "${extra_config[@]}" \
-      -DBUILD_{SHARED,STATIC}_LIBS=ON \
+      -DBUILD_SHARED_LIBS=ON \
       -DSPM_ENABLE_SHARED=ON \
       -S "${_realname}-${pkgver}" \
-      -B "build-${MSYSTEM}"
+      -B "build-${MSYSTEM}" \
+      -Wno-dev
   cmake --build "build-${MSYSTEM}"
 
   # Temporary install for Python to pick up
