Adding strip option

--- a/mingw-w64-sentencepiece/PKGBUILD
+++ b/mingw-w64-sentencepiece/PKGBUILD
@@ -20,8 +20,8 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-python-wheel")
 source=("https://github.com/google/sentencepiece/archive/v${pkgver}.tar.gz"
         "0001-make-it-more-friendly-for-mingw-enviroments.patch")
-sha256sums=('SKIP'
-            'SKIP')
+sha256sums=('9970f0a0afee1648890293321665e5b2efa04eaec9f1671fcf8048f456f5bb86'
+            'aa650647341691181f2c0ddd2ccdb3854d443cb8b486b2e331c996579a784d45')
 
 prepare() {
   cd "${srcdir}/${_realname}-${pkgver}"
@@ -72,6 +72,7 @@ package_sentencepiece() {
 
 package_python-sentencepiece() {
   pkgdesc="Python bindings for sentencepiece (MinGW-w64)"
+  options=('!strip')
   depends=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 
   cd "${srcdir}/${_realname}-${pkgver}/python"
