libssh: remove outdated workaround

--- a/mingw-w64-libssh/PKGBUILD
+++ b/mingw-w64-libssh/PKGBUILD
@@ -4,7 +4,7 @@ _realname=libssh
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 pkgver=0.11.1
-pkgrel=1
+pkgrel=2
 pkgdesc="Library for accessing ssh client services through C libraries (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -24,19 +24,16 @@ depends=("${MINGW_PACKAGE_PREFIX}-openssl"
          "${MINGW_PACKAGE_PREFIX}-libwinpthread-git")
 checkdepends=("${MINGW_PACKAGE_PREFIX}-cmocka")
 source=("https://www.libssh.org/files/${pkgver%.*}/${_realname}-${pkgver}.tar.xz"{,.asc}
-         002-libssh-fix-pkgconfig.patch
-         010-lld.patch)
+         002-libssh-fix-pkgconfig.patch)
 sha256sums=('14b7dcc72e91e08151c58b981a7b570ab2663f630e7d2837645d5a9c612c1b79'
             'SKIP'
-            '45eb3be0e97f9d50144ac14404545a1a337609b3d650aa3b2c353affefb220cd'
-            'b466e14c1f3e34b0891ea04ad8c008984cada054398cadd2fb2bb44460ae198f')
+            '45eb3be0e97f9d50144ac14404545a1a337609b3d650aa3b2c353affefb220cd')
 validpgpkeys=('8DFF53E18F2ABC8D8F3C92237EE0FC4DCC014E3D'  # Andreas Schneider <asn@cryptomilk.org>
               '88A228D89B07C2C77D0C780903D5DF8CFDD3E8E7') # libssh release key (release key) <libssh@libssh.org>
 
 prepare() {
   cd ${srcdir}/${_realname}-${pkgver}
   patch -p1 -i ${srcdir}/002-libssh-fix-pkgconfig.patch
-  patch -p1 -i ${srcdir}/010-lld.patch
 }
 
 build() {
