helix: fix build on clang envs

--- a/mingw-w64-helix/PKGBUILD
+++ b/mingw-w64-helix/PKGBUILD
@@ -19,11 +19,13 @@ optdepends=("${MINGW_PACKAGE_PREFIX}-rust-analyzer: Rust LSP"
             "${MINGW_PACKAGE_PREFIX}-lldb: for lldb-dap")
 source=("$url/archive/$pkgver/${_realname}-${pkgver}.tar.gz"
         'icon.patch'
-        'fix-runtime-dir.patch')
+        'fix-runtime-dir.patch'
+        'disable-vendoring-and-bump-cc.patch')
 noextract=("${_realname}-${pkgver}.tar.gz")
 sha256sums=('0f466ed2de039a7eca6faf29fc0db712c92e1a59d0bdc7e8916c717ceee8b3b3'
             'f45f0656cb1ceb5c90925c80b093335622f9ad3f64d4e2c8a3a0ea0ab43d900e'
-            'f071538f25e12ca0898c61daa3a2fbf9416a5be4f014682942dcf34dfb0f1335')
+            'f071538f25e12ca0898c61daa3a2fbf9416a5be4f014682942dcf34dfb0f1335'
+            '6a0a2ee91f7a81959a732561ff5899e113e29ca3085121fda1c559d815a4616b')
 
 prepare() {
   tar xf "${_realname}-${pkgver}.tar.gz" \
@@ -53,6 +55,11 @@ END
 
   patch -Np1 -i ../icon.patch
   patch -Np1 -i ../fix-runtime-dir.patch
+
+  # pull in https://github.com/rust-lang/cc-rs/pull/1176
+  if [[ "${MSYSTEM}" == *"CLANG"* ]]; then
+    patch -Np1 -i ../disable-vendoring-and-bump-cc.patch
+  fi
 }
 
 build() {
