qt6: update to 6.8.1 (#22768)
* qt:update to 6.8.1

* FIX PATCH

* update sha

* patch 3rd party

* fix patch

* another patch in 3rd party

* adapt patch

--- a/mingw-w64-qt6-quick3d/PKGBUILD
+++ b/mingw-w64-qt6-quick3d/PKGBUILD
@@ -4,7 +4,7 @@ _realname=qt6-quick3d
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}"
          "${MINGW_PACKAGE_PREFIX}-${_realname}-debug")
-_qtver=6.8.0
+_qtver=6.8.1
 pkgver=${_qtver/-/}
 pkgrel=1
 pkgdesc='Qt module and API for defining 3D content in Qt Quick (mingw-w64)'
@@ -28,9 +28,13 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "rsync")
 _pkgfn="${_realname/6-/}-everywhere-src-${_qtver}"
 source=("https://download.qt.io/official_releases/qt/${pkgver%.*}/${_qtver}/submodules/${_pkgfn}.tar.xz"
-        001-appending-qt6-to-remove-qt5-conflict.patch)
-sha256sums=('3e95044ee2da33db1a6fa3f834b09e71b2491c4899bac3a3bdf0c10b06f0223f'
-            '211bb1f042bf9c0ddedb15b0e3d62b94e3b247dc96294fd92f4d8035784f1c7d')
+        001-appending-qt6-to-remove-qt5-conflict.patch
+        002-fix-bezier-curve.patch
+        003-fix-pointi.patch)
+sha256sums=('3f3d345e6c95fcd40ab37e6a37cd31811e5d239dea8e142e632d4ea41bf20ce7'
+            '211bb1f042bf9c0ddedb15b0e3d62b94e3b247dc96294fd92f4d8035784f1c7d'
+            '774abd51e93fbcd9b4db4cd97a0200b546eccc0dc8ca9014c1a05a7c244e6bb8'
+            'ce6302aee7306d5bbffb4c5887b102e542bf08068bed014ab4a91f1245cebed9')
 
 # Helper macros to help make tasks easier #
 apply_patch_with_msg() {
@@ -45,7 +49,9 @@ prepare() {
   cd $srcdir/${_pkgfn}
 
   apply_patch_with_msg \
-    001-appending-qt6-to-remove-qt5-conflict.patch
+    001-appending-qt6-to-remove-qt5-conflict.patch \
+    002-fix-bezier-curve.patch \
+    003-fix-pointi.patch
 }
 
 build() {
