qt6-quick3d: link upstream issues for context

--- a/mingw-w64-qt6-quick3d/PKGBUILD
+++ b/mingw-w64-qt6-quick3d/PKGBUILD
@@ -49,7 +49,11 @@ prepare() {
   cd $srcdir/${_pkgfn}
 
   apply_patch_with_msg \
-    001-appending-qt6-to-remove-qt5-conflict.patch \
+    001-appending-qt6-to-remove-qt5-conflict.patch
+
+  # https://bugreports.qt.io/browse/QTBUG-131962
+  # https://github.com/RenderKit/embree/commit/cda4cf1919bb2a748e78915fbd6e421a1056638d
+  apply_patch_with_msg \
     002-fix-bezier-curve.patch \
     003-fix-pointi.patch
 }
