z3: build without gmp on i686

--- a/mingw-w64-z3/PKGBUILD
+++ b/mingw-w64-z3/PKGBUILD
@@ -4,14 +4,14 @@ _realname=z3
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 pkgver=4.13.3
-pkgrel=2
+pkgrel=3
 pkgdesc="Z3 is a high-performance theorem prover being developed at Microsoft Research (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
 url="https://github.com/Z3Prover/z3"
 license=('spdx:MIT')
 depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
-         "${MINGW_PACKAGE_PREFIX}-gmp")
+         $([[ ${CARCH} == i686 ]] || echo "${MINGW_PACKAGE_PREFIX}-gmp"))
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-ninja"
@@ -75,9 +75,9 @@ build() {
   mkdir -p "${srcdir}"/build-${MSYSTEM}-shared && cd "${srcdir}"/build-${MSYSTEM}-shared
 
   if [[ ${CARCH} == i686 ]]; then
-    extra_config+=("-DZ3_BUILD_PYTHON_BINDINGS=OFF")
+    extra_config+=("-DZ3_BUILD_PYTHON_BINDINGS=OFF" "-DZ3_USE_LIB_GMP=OFF")
   else
-    extra_config+=("-DZ3_BUILD_PYTHON_BINDINGS=ON")
+    extra_config+=("-DZ3_BUILD_PYTHON_BINDINGS=ON" "-DZ3_USE_LIB_GMP=ON")
   fi
 
   msg "Build shared z3"
@@ -86,7 +86,6 @@ build() {
     -G"Ninja" \
     -DCMAKE_INSTALL_PREFIX=${MINGW_PREFIX} \
     -DZ3_BUILD_LIBZ3_SHARED=ON \
-    -DZ3_USE_LIB_GMP=ON \
     -DZ3_BUILD_TEST_EXECUTABLES=OFF \
     -DZ3_INCLUDE_GIT_HASH=OFF \
     -DZ3_INCLUDE_GIT_DESCRIBE=OFF \
